--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -6,7 +6,7 @@
 		<h1>Wicket-Foundation Samples Catalog</h1>
 	</div>
     <div class="row">
-      <h3>14/52 pages (27%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.0</a>)</h3>
+      <h3>15/52 pages (29%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.0</a>)</h3>
     </div>
 
     <p>
@@ -88,7 +88,7 @@
         <div class="small-4 columns">
           <wicket:link>
             <h3>Typography</h3>
-            <div class="row">1. Type</div>
+            <div class="row">1. <a href="TypePage.html">Type</a></div>
             <div class="row">2. Inline Lists</div>
             <div class="row">3. Labels</div>
             <div class="row">4. Keystrokes</div>
