--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -107,7 +107,7 @@
         <div class="small-4 columns">
           <wicket:link>
             <h3>Content</h3>
-            <div class="row">1. Dropdowns</div>
+            <div class="row">1. <a href="DropdownsPage.html">Dropdowns</a></div>
             <div class="row">2. Pricing Tables</div>
             <div class="row">3. Progress Bars</div>
             <div class="row">4. Tables</div>
