--- a/wicket-foundation-samples/src/main/java/com/iluwatar/DropdownsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/DropdownsPage.html
@@ -42,24 +42,9 @@
                 </div>
                 <div>
                     <h4>HTML Rendered</h4>
-                    <p>
-                        <a href="#" data-dropdown="drop1">Has
-                            Dropdown</a> | <a href="#" data-dropdown="drop2">Has
-                            Content Dropdown</a>
-                    <ul id="drop1" data-dropdown-content
-                        class="f-dropdown">
-                        <li><a href="#">This is a link</a></li>
-                        <li><a href="#">This is another</a></li>
-                        <li><a href="#">Yet another</a></li>
-                    </ul>
-                    <div id="drop2" data-dropdown-content
-                        class="f-dropdown content">
-                        <p>Some text that people will think is
-                            awesome! Some text that people will think is
-                            awesome! Some text that people will think is
-                            awesome!</p>
-                    </div>
-                    </p>
+
+                    <div wicket:id="basic"></div>
+                    
                 </div>
             </div>
 
