Initial try on dropdown with html content.

--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/dropdown/FoundationDropdown.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/dropdown/FoundationDropdown.html
@@ -8,6 +8,7 @@
     <wicket:panel>
         <button wicket:id="btn"></button>
         <br>
+        <div wicket:id="content"></div>
         <ul wicket:id="container">
             <li wicket:id="item"><a wicket:id="link"><wicket:container wicket:id="body"></wicket:container></a></li>
         </ul>
