Refactored dropdown class hierarchy into base class and two child classes.

--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/dropdown/FoundationContentDropdown.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/dropdown/FoundationContentDropdown.html
@@ -6,9 +6,7 @@
 </head>
 <body>
     <wicket:extend>
-        <ul wicket:id="container">
-            <li wicket:id="item"><a wicket:id="link"><wicket:container wicket:id="body"></wicket:container></a></li>
-        </ul>
+        <div wicket:id="content"></div>
     </wicket:extend>
 </body>
 </html>
