--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -77,7 +77,7 @@
             <div class="row">1. <a href="ButtonsPage.html">Buttons</a></div>
             <div class="row">2. <a href="ButtonGroupPage.html">Button Groups</a></div>
             <div class="row">3. Split Buttons</div>
-            <div class="row">4. Dropdown Buttons</div>
+            <div class="row">4. <a href="DropdownButtonsPage.html">Dropdown Buttons</a></div>
           </wicket:link>
         </div>
       </div>
