--- a/wicket-foundation-samples/src/main/java/com/iluwatar/DropdownButtonsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/DropdownButtonsPage.html
@@ -67,7 +67,7 @@ private FoundationDropdown createDropdownButton(String id, String title, List&lt
                 <div>
                     <h4>HTML</h4>
                     
-<pre><code class="language-html"><div class="code-container"><span class="tag">&lt;<span class="title">span</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;basicDropdown&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">span</span>&gt;</span> | <span class="tag">&lt;<span class="title">span</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;basicContentDropdown&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">span</span>&gt;</span>
+<pre><code class="language-html"><div class="code-container"><span class="tag">&lt;<span class="title">div</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;advanced&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">div</span>&gt;</span>
 </div></code>
 </pre>
 
@@ -75,25 +75,28 @@ private FoundationDropdown createDropdownButton(String id, String title, List&lt
                 <div>
                     <h4>Java</h4>
                     
-<pre><code class="language-html"><div class="code-container">
+<pre><code class="language-html"><div class="code-container">List&lt;String&gt; advancedLinks = Arrays.asList(&quot;This is a link&quot;, &quot;This is another&quot;, &quot;Yet another&quot;);
+DropdownOptions options = new DropdownOptions(DropdownType.DROPDOWNBUTTON).setSize(ButtonSize.LARGE).setRadius(ButtonRadius.ROUND).setColor(ButtonColor.ALERT);
+add(createDropdownButton(&quot;advanced&quot;, &quot;Dropdown Button&quot;, advancedLinks, options));
+
+private FoundationDropdown createDropdownButton(String id, String title, List&lt;String&gt; links, DropdownOptions options) {
+    return new FoundationDropdown(id, title, options, Collections.unmodifiableList(links)) {
+            @Override
+            protected WebMarkupContainer createDropdownLink(int idx, String id) {
+                return new Link&lt;String&gt;(id) {
+                    @Override
+                    public void onClick() {}
+                };
+            }
+    };
+}
 </div></code>
 </pre>
 
                 </div>
                 <div>
                     <h4>Rendered HTML</h4>
-                    <button data-dropdown="dropE" aria-controls="dropE"
-                        , aria-expanded="false"
-                        class="large alert round button dropdown">Dropdown
-                        Button</button>
-                    <br>
-                    <ul id="dropE" data-dropdown-content
-                        class="f-dropdown" role="menu"
-                        aria-hidden="false" tabindex="-1">
-                        <li><a href="#">This is a link</a></li>
-                        <li><a href="#">This is another</a></li>
-                        <li><a href="#">Yet another</a></li>
-                    </ul>
+                    <div wicket:id="advanced"></div>
                 </div>
             </div>
         </div>
