--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -6,7 +6,7 @@
 		<h1>Wicket-Foundation Samples Catalog</h1>
 	</div>
     <div class="row">
-      <h3>17/52 pages (33%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.0</a>)</h3>
+      <h3>18/52 pages (35%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.0</a>)</h3>
     </div>
 
     <p>
@@ -29,7 +29,7 @@
             <h3>Structure</h3>
             <div class="row">1. <a href="http://foundation.zurb.com/docs/media-queries.html">Media Queries (external)</a></div>
             <div class="row">2. <a href="VisibilityPage.html">Visibility</a></div>
-            <div class="row">3. Grid</div> <!-- GridPage.html -->
+            <div class="row">3. <a href="GridPage.html">Grid</a></div>
             <div class="row">4. Block Grid</div> <!-- BlockGridPage.html -->
             <div class="row">5. Interchange Responsive Content</div>
             <div class="row">6. Utility Classes</div>
