Enabled link to block grid sample page on catalog page.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -30,7 +30,7 @@
             <div class="row">1. <a href="http://foundation.zurb.com/docs/media-queries.html">Media Queries (external)</a></div>
             <div class="row">2. <a href="VisibilityPage.html">Visibility</a></div>
             <div class="row">3. <a href="GridPage.html">Grid</a></div>
-            <div class="row">4. Block Grid</div> <!-- BlockGridPage.html -->
+            <div class="row">4. <a href="BlockGridPage.html">Block Grid</a></div>
             <div class="row">5. Interchange Responsive Content</div>
             <div class="row">6. Utility Classes</div>
             <div class="row">7. Javascript Utilites</div>
