--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -100,7 +100,7 @@
             <div class="row">1. Reveal Modal</div>
             <div class="row">2. <a href="AlertsPage.html">Alerts</a></div>
             <div class="row">3. <a href="PanelsPage.html">Panels</a></div>
-            <div class="row">4. Tooltips</div>
+            <div class="row">4. <a href="TooltipsPage.html">Tooltips</a></div>
             <div class="row">5. Joyride</div>
           </wicket:link>
         </div>
