Added top bar sample page skeleton and rendering test.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -41,7 +41,7 @@
           <wicket:link>
             <h3>Navigation</h3>
             <div class="row">1. Offcanvas</div>
-            <div class="row">2. Top Bar</div>
+            <div class="row">2. <a href="TopBarPage.html">Top Bar</a></div>
             <div class="row">3. Side Nav</div>
             <div class="row">4. Magellan Sticky Nav</div>
             <div class="row">5. Sub Nav</div>
