Implemented FoundationTopBarTitlePanel (top bar component).

--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/FoundationTopBarPanel.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/FoundationTopBarPanel.html
@@ -7,7 +7,9 @@
 <body>
     <wicket:panel>
         <div wicket:id="topBarContainer">
-            <nav wicket:id="topBar"></nav>
+            <nav wicket:id="topBar">
+                <ul class="title-area" wicket:id="titleContainer"></ul>
+            </nav>
         </div>
     </wicket:panel>
 </body>
