--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/FoundationTopBarPanel.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/FoundationTopBarPanel.html
@@ -9,6 +9,14 @@
         <div wicket:id="topBarContainer">
             <nav wicket:id="topBar">
                 <ul class="title-area" wicket:id="titleContainer"></ul>
+                <section class="top-bar-section">
+                    <ul class="right" wicket:id="rightContainer">
+                        <li wicket:id="item"></li>
+                    </ul>
+                    <ul class="left" wicket:id="leftContainer">
+                        <li wicket:id="item"></li>
+                    </ul>
+                </section>
             </nav>
         </div>
     </wicket:panel>
