Work on first top bar example on sample page.

--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/TopBarRecursiveLinkPanel.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/TopBarRecursiveLinkPanel.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <wicket:panel>
-        <a wicket:id="link"></a>
+        <a wicket:id="link"><wicket:container wicket:id="text"></wicket:container></a>
         <ul class="dropdown" wicket:id="dropdown">
             <li wicket:id="item"></li>
         </ul>
