--- a/wicket-foundation-samples/src/main/java/com/iluwatar/TopBarPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/TopBarPage.html
@@ -47,56 +47,7 @@
             
             <div>
                 <h4 id="html">Rendered HTML</h4>
-                <div>
-                    <nav class="top-bar" data-topbar role="navigation">
-                        <ul class="title-area">
-                            <li class="name">
-                                <h1>
-                                    <a href="#">My Site</a>
-                                </h1>
-                            </li>
-                            <li class="toggle-topbar menu-icon"><a
-                                href=""><span>Menu</span></a></li>
-                        </ul>
-
-                        <section class="top-bar-section">
-
-                            <!-- Right Nav Section -->
-                            <ul class="right show-for-large-up">
-                                <li class="active"><a href="#">Right
-                                        Button Active</a></li>
-                                <li class="has-dropdown"><a
-                                    href="#">Right Button Dropdown</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">First
-                                                link in dropdown</a></li>
-                                        <li class="active"><a
-                                            href="#">Active link in
-                                                dropdown</a></li>
-                                    </ul></li>
-                            </ul>
-
-                            <ul class="right hide-for-large-up">
-                                <li class="active"><a href="#">Right
-                                        Button</a></li>
-                                <li class="has-dropdown"><a
-                                    href="#">Right Dropdown</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">First
-                                                link in dropdown</a></li>
-                                        <li class="active"><a
-                                            href="#">Active link in
-                                                dropdown</a></li>
-                                    </ul></li>
-                            </ul>
-
-                            <!-- Left Nav Section -->
-                            <ul class="left show-for-large-up">
-                                <li><a href="#">Left Button</a></li>
-                            </ul>
-                        </section>
-                    </nav>
-                </div>
+                <div wicket:id="basic"></div>
             </div>
             <div>
                 <br>
