Top bar drop downs can contain labels. Top bar items have active property.

--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/TopBarRecursiveLinkPanel.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/topbar/TopBarRecursiveLinkPanel.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <wicket:panel>
+        <label wicket:id="labelContainer"><wicket:container wicket:id="label"></wicket:container></label>
         <a wicket:id="link"><wicket:container wicket:id="text"></wicket:container></a>
         <ul class="dropdown" wicket:id="dropdown">
             <li wicket:id="item"></li>
