--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -6,7 +6,7 @@
 		<h1>Wicket-Foundation Samples Catalog</h1>
 	</div>
     <div class="row">
-      <h3>21/52 pages (40%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.0</a>)</h3>
+      <h3>26/59 pages (44%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.5</a>)</h3>
     </div>
 
     <p>
@@ -17,11 +17,14 @@
             <div class="row">1. <a href="http://foundation.zurb.com/docs/index.html">Getting started (external)</a></div>
             <div class="row">2. <a href="http://foundation.zurb.com/docs/css.html">CSS (external)</a></div>
             <div class="row">3. <a href="http://foundation.zurb.com/docs/sass.html">Sass (external)</a></div>
-            <div class="row">4. <a href="http://foundation.zurb.com/docs/applications.html">Applications (external)</a></div>
-            <div class="row">5. <a href="http://foundation.zurb.com/docs/javascript.html">Javascript (external)</a></div>
-            <div class="row">6. <a href="http://foundation.zurb.com/docs/components/global.html">Global styles (external)</a></div>
-            <div class="row">7. Kitchen sink</div>
-            <div class="row">8. <a href="http://foundation.zurb.com/docs/upgrading.html">Upgrading (external)</a></div>
+            <div class="row">4. <a href="http://foundation.zurb.com/docs/sass-files.html">Sass Files (external)</a></div>
+            <div class="row">5. <a href="http://foundation.zurb.com/docs/using-sass.html">Using Sass (external)</a></div>
+            <div class="row">6. <a href="http://foundation.zurb.com/docs/applications.html">Applications (external)</a></div>
+            <div class="row">7. <a href="http://foundation.zurb.com/docs/javascript.html">Javascript (external)</a></div>
+            <div class="row">8. <a href="http://foundation.zurb.com/docs/components/global.html">Global styles (external)</a></div>
+            <div class="row">9. Kitchen sink</div>
+            <div class="row">10. <a href="http://foundation.zurb.com/docs/accessibility.html">Accessibility (external)</a></div>
+            <div class="row">11. <a href="http://foundation.zurb.com/docs/upgrading.html">Upgrading (external)</a></div>
           </wicket:link>
         </div>
         <div class="small-4 columns">
@@ -42,11 +45,12 @@
             <h3>Navigation</h3>
             <div class="row">1. Offcanvas</div>
             <div class="row">2. <a href="TopBarPage.html">Top Bar</a></div>
-            <div class="row">3. Side Nav</div>
-            <div class="row">4. Magellan Sticky Nav</div>
-            <div class="row">5. Sub Nav</div>
-            <div class="row">6. <a href="BreadcrumbsPage.html">Breadcrumbs</a></div>
-            <div class="row">7. Pagination</div>
+            <div class="row">3. <a href="IconBarPage.html">Icon Bar</a></div>
+            <div class="row">4. Side Nav</div>
+            <div class="row">5. Magellan Sticky Nav</div>
+            <div class="row">6. Sub Nav</div>
+            <div class="row">7. <a href="BreadcrumbsPage.html">Breadcrumbs</a></div>
+            <div class="row">8. Pagination</div>
           </wicket:link>
         </div>
       </div>
@@ -67,8 +71,9 @@
           <wicket:link>
             <h3>Forms</h3>
             <div class="row">1. Forms</div>
-            <div class="row">2. Sliders</div>
-            <div class="row">3. Abide Validation</div>
+            <div class="row">2. Switches</div>
+            <div class="row">3. Range Sliders</div>
+            <div class="row">4. Abide Validation</div>
           </wicket:link>
         </div>
         <div class="small-4 columns">
@@ -120,16 +125,19 @@
     </p>
 
     <p>
-      <div class="row">
+      <div class="row verticalPadding50">
+        <div class="small-4 columns">
+          <wicket:link>
+            <h3>Support</h3>
+            <div class="row">1. <a href="http://foundation.zurb.com/docs/changelog.html">Changelog (external)</a></div>
+            <div class="row">2. <a href="http://foundation.zurb.com/docs/compatibility.html">Compatibility (external)</a></div>
+          </wicket:link>
+        </div>
         <div class="small-4 columns">
           <wicket:link>
             <h3>Extras</h3>
             <div class="row">1. Welcome to Foundation</div> <!-- IndexPage.html -->
             <div class="row">2. Foundation Icons</div>
-          </wicket:link>
-        </div>
-        <div class="small-4 columns">
-          <wicket:link>
           </wicket:link>
         </div>
         <div class="small-4 columns">
