--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/iconbar/FoundationIconBar.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/iconbar/FoundationIconBar.html
@@ -8,6 +8,7 @@
     <wicket:panel>
         <a class="item" wicket:id="item">
             <img wicket:id="img" >
+            <i wicket:id="icon"></i>
             <label wicket:id="label"><wicket:container wicket:id="text"></wicket:container></label>
         </a>
     </wicket:panel>
