Unified html headers.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/BreadcrumbsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/BreadcrumbsPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
   <wicket:extend>
 
   <div class="row">
@@ -76,4 +81,5 @@ add(new BreadcrumbsPanel("advanced", new ListModel&lt;&gt;(advancedItems)));
   <br />
   
 </wicket:extend>
+</body>
 </html>
