--- a/wicket-foundation-samples/src/main/java/com/iluwatar/ButtonsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/ButtonsPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
   <wicket:extend>
 
   <div class="row">
@@ -94,4 +99,5 @@ add(new FoundationButton("expand", Model.of("Expand"), new FoundationButtonOptio
   </div>
 
 </wicket:extend>
+</body>
 </html>
