--- a/wicket-foundation-samples/src/main/java/com/iluwatar/IndexPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/IndexPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
   <wicket:extend>    
     <div class="row">
       <div class="large-12 columns">
@@ -150,5 +155,6 @@
     </div>
     
    </wicket:extend>
+ </body>
  </html>
  
