--- a/wicket-foundation-samples/src/main/java/com/iluwatar/PanelsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/PanelsPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
 <wicket:extend>
 
   <div class="row">
@@ -73,4 +78,5 @@ add(new FoundationPanelBorder("callout", Model.of(FoundationPanelType.CALLOUT)))
   </div>
 
 </wicket:extend>
+</body>
 </html>
