--- a/wicket-foundation-samples/src/main/java/com/iluwatar/VisibilityPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/VisibilityPage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
   <wicket:extend>
     <div class="row">
       <h1 id="visibility-classes">Visibility Classes</h1>
@@ -213,4 +218,5 @@ visibleForSmallOnly.add(new VisibleForScreenSizeBehavior(Model.of(VisibleForScre
       <hr>
     </div>
   </wicket:extend>
+</body>
 </html>
