--- a/wicket-foundation-samples/src/main/java/com/iluwatar/TypePage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/TypePage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+<meta charset="utf-8" />
+<title>wicket-foundation</title>
+</head>
+<body>
 <wicket:extend>
 
     <div class="row">
@@ -490,4 +495,5 @@
     </div>
         
 </wicket:extend>
+</body>
 </html>
