--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -99,7 +99,7 @@
           <wicket:link>
             <h3>Typography</h3>
             <div class="row">1. <a href="TypePage.html">Type</a></div>
-            <div class="row">2. Inline Lists</div>
+            <div class="row">2. <a href="InlineListsPage.html">Inline Lists</a></div>
             <div class="row">3. Labels</div>
             <div class="row">4. Keystrokes</div>
           </wicket:link>
